--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <h1>MOAB</h1>
 	<div class="one">
 		<p>Golden Cookie</p>
-		<img src="https://www.google.com/search?q=eternatus&sxsrf=ALiCzsYys2CutuRcy17tA11eGu-IqGdTnw:1668419628024&source=lnms&tbm=isch&sa=X&ved=2ahUKEwiH0466s637AhXDdXAKHRuxBEYQ_AUoAXoECAMQAw&cshid=1668419642476673&biw=1177&bih=582&dpr=2#imgrc=mnFDwXa0B9Op1M">
+		<img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/890.png">
 	</div>
 	<div class="two">
 		<p>Cursor Icon</p>
